<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/main_screen_main_padding"
    >

    <ImageView
        android:id="@+id/myImage"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/img_main_page"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/myFrameStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image" />

    <FrameLayout
        android:id="@+id/myFrameStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/myImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/item_color_accent_ripple_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/BMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/myFrameStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/History"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/item_circular_color_accent_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculator"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toBottomOf="@id/BMI"
        app:layout_constraintEnd_toEndOf="@id/BMI"
        app:layout_constraintStart_toStartOf="@id/BMI"
        />

    <FrameLayout
        android:id="@+id/History"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/myFrameStart"
        app:layout_constraintStart_toEndOf="@id/BMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/item_circular_color_accent_background"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/history"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/historyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/History"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintTop_toBottomOf="@id/BMI"
        app:layout_constraintEnd_toEndOf="@id/History"
        app:layout_constraintStart_toStartOf="@id/History"
        />



</androidx.constraintlayout.widget.ConstraintLayout>